# Evolutionary_Algorithm_C

./: .gitignore  CMakeLists.txt  README.md  create_solution.bat  create_solution.sh  main.cpp
src/: image_handling.cpp  image_handling.h  main.cpp  main.h  menu.cpp  menu.h
